--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ input[type='range']::-moz-range-track {
     background-color: #18171f;
 }
 
+input[type='range']::-moz-range-thumb:active {
+    background: black;
+    border: 2px solid #a4ffaf;
+}
+
 /* webkit */
 
 input[type='range']::-webkit-slider-thumb {
@@ -53,6 +58,11 @@ input[type='range']::-webkit-slider-runnable-track {
     border: none;
     background-color: #18171f;
     height: 8px;
+}
+
+input[type='range']::-webkit-slider-thumb:active {
+    background: black;
+    border: 2px solid #a4ffaf;
 }
 
 /* remove the artificial progress bar if it's mozilla */
